# ATS-System

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  PROJECT_STRUCTURE.md  README.md  config.py  config.yaml  docker-compose.yml  pyproject.toml  rank_test_accountant_15.json  requirements-dev.txt  requirements-prod.txt  requirements.txt  run.py
api/: __init__.py  main.py
data/: __init__.py  loaders.py  pdf_processing.py
frontend/: app.js  index.html  styles.css
jds/: ACCOUNTANT.txt  BUSINESS-DEVELOPMENT.txt  DESIGNER.txt  ENGINEERING.txt  FINANCE.txt  HEALTHCARE.txt  HUMAN-RESOURCES.txt  INFORMATION-TECHNOLOGY.txt  SALES.txt  TEACHER.txt
models/: __init__.py  category_encoder.py  cross_encoder.py  extractor.py  skill_trie.py
pipeline/: __init__.py  inference.py
reports/: rank_eval_matrix_pdfs_1768048969.csv  rank_eval_matrix_pdfs_1768048969.json  rank_eval_matrix_pdfs_1768049719.csv  rank_eval_matrix_pdfs_1768049719.json  rank_eval_matrix_pdfs_1768133435.csv  rank_eval_matrix_pdfs_1768133435.json  rank_eval_matrix_pdfs_1768135907.csv  rank_eval_matrix_pdfs_1768135907.json  rank_eval_matrix_pdfs_1768138257.csv  rank_eval_matrix_pdfs_1768138257.json  rank_eval_ndcg_ACCOUNTANT_vs_INFORMATION-TECHNOLOGY_1768050837.json  rank_eval_ndcg_ACCOUNTANT_vs_INFORMATION-TECHNOLOGY_1768051055.json  rank_eval_ndcg_ACCOUNTANT_vs_INFORMATION-TECHNOLOGY_1768051241.json  rank_eval_ndcg_ACCOUNTANT_vs_INFORMATION-TECHNOLOGY_1768051281.json  rank_eval_ndcg_ACCOUNTANT_vs_INFORMATION-TECHNOLOGY_1768051538.json  rank_eval_ndcg_ACCOUNTANT_vs_INFORMATION-TECHNOLOGY_1768051631.json  rank_eval_ndcg_ACCOUNTANT_vs_INFORMATION-TECHNOLOGY_1768051675.json  rank_eval_ndcg_ACCOUNTANT_vs_INFORMATION-TECHNOLOGY_1768051727.json  run_rank_1768140941.json  (+3 more)
(+55 files in other folders)
